--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
-    <title>WebPage</title>
+    <title>Pets</title>
   
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
@@ -31,7 +31,8 @@ img{
 } */
 </style>
 <body style="background-color: whitesmoke; color: black; font-size:16px;">
-  
+
+
   <!-- nav bar -->
   <nav class="navbar navbar-expand-lg navbar-white bg-white p-3 ">
     <a class="navbar-brand ml-5" href="#">PetPic</a>
@@ -107,5 +108,7 @@ img{
         </div>
       </div>
   </section>
+
+  {% block content %}{% endblock %}
 
 </body>
