Added create image and pet template
Templates to added pets add images to pets and url links to work.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,79 +35,13 @@ img{
 
   <!-- nav bar -->
   <nav class="navbar navbar-expand-lg navbar-white bg-white p-3 ">
-    <a class="navbar-brand ml-5" href="#">PetPic</a>
+    <a class="navbar-brand ml-5" href="/">PetPic</a>
     <form class="form-inline ml-auto mr-auto">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn m-2 my-sm-0" type="submit">Search</button>
       <button class="btn m-2 my-sm-0" type="submit">Sign in</button>
     </form>
   </nav>
-
-
-  <!-- Profile image and info -->
-  <section>
-    <div class="container-fluid mt-5 bg-whitesmoke"> 
-      <div class="card-group bg-white mr-5 ml-5">
-        <div class="card bg-white col-5">
-            
-                <img src="https://via.placeholder.com/1080x720.png" class="card-img-top rounded mx-auto d-block" alt="...">
-        
-        </div>
-
-        <div class="card bg-white">
-            <div class="card-body">
-              <h3 class="card-title">UserName</h3>
-              <p class="card-text p-2">Pets: 3 Posts: 24</p>
-              <p class="card-text p-2">Power to the peasants</p>
-              
-              <a href="#" class="btn btn-primary">Edit your profile</a>
-            </div>
-        </div>
-      </div>
-    </div> 
-  </section>
- 
- <!-- Images about pets -->
-  <section>
-    <div class="row mt-5 row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/1080x720.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Pet Name</h5>
-              <p class="card-text">likes, share</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/1080x720.png" class="card-img-top" alt="...">
-            <div id="body" class="card-body">
-              <h5 class="card-title">Pet Name</h5>
-              <p class="card-text">Likes Share</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/1080x720.png"class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Likes Share</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/1080x720.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Likes Share</p>
-            </div>
-          </div>
-        </div>
-      </div>
-  </section>
 
   {% block content %}{% endblock %}
 
