--- a/templates/pet_list.html
+++ b/templates/pet_list.html
@@ -3,48 +3,47 @@
 
 
 <main>
+  <!-- Profile image and info -->
+  <section>
+    <div class="container-fluid mt-5 bg-whitesmoke"> 
+      <div class="card-group bg-white mr-5 ml-5">
+        <div class="card bg-white col-5">
+            
+                <img src="https://via.placeholder.com/1080x720.png" class="card-img-top rounded mx-auto d-block" alt="...">
+        
+        </div>
+
+        <div class="card bg-white">
+            <div class="card-body">
+              <h3 class="card-title">{{username}}</h3>
+              <p class="card-text p-2">{{text}}</p>
+              
+              <a href="#" class="btn btn-primary">Edit your profile</a>
+            </div>
+        </div>
+      </div>
+    </div> 
+  </section>
+
+
     <section>
         <div class="row mt-5 row-cols-1 row-cols-md-3 g-4">
           {% for pet in pet_list %}
             <div class="col">
               <div class="card h-100">
-                <img src="https://via.placeholder.com/1080x720.png" class="card-img-top" alt="...">
+                <a href="/pet/{{pet._id}}"><img src="{{pet.photo_url}}" class="card-img-top" alt="..."></a>
                 <div class="card-body">
-                  <h5 class="card-title">{{pet}}</h5>
+                  <h5 class="card-title">{{pet.name}}</h5>
                   <p class="card-text">likes, share</p>
                 </div>
               </div>
             </div>
           {% endfor %}
-          <!-- 
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://via.placeholder.com/1080x720.png" class="card-img-top" alt="...">
-                <div id="body" class="card-body">
-                  <h5 class="card-title">Pet Name</h5>
-                  <p class="card-text">Likes Share</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://via.placeholder.com/1080x720.png"class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Likes Share</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://via.placeholder.com/1080x720.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Likes Share</p>
-                </div>
-              </div>
-            </div> -->
         </div>
     </section>
+
+  <section>
+    <a class="btn btn-primary" href="/create" role="button"> New Pet</a>
+  </section>
 </main>
 {% endblock content %}
