Added pet remove
Ability to delete pets from your list of pets

--- a/templates/pet_list.html
+++ b/templates/pet_list.html
@@ -43,7 +43,8 @@
     </section>
 
   <section>
-    <a class="btn btn-primary" href="/create" role="button"> New Pet</a>
+    <a class="btn btn-outline-primary" href="/create" role="button"> New Pet</a>
+    <a class="btn btn-outline-warning" href="/delete" role="button"> Delete Pet</a>
   </section>
 </main>
 {% endblock content %}
