Added placeholder info
In an event where input is not completed, placeholder text is used to fill in

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,21 @@ img{
   object-fit: cover;
 }
 .card{
-    border:none;
-    
+  border:none;
+  background-color: rgb(255, 162, 104);}
 
+#form{
+  
+  background-color: rgb(157, 220, 254);
+  min-width: 500px;
+  max-width: 700px;
+}  
+#form_header{
+  background-color: rgb(62, 195, 252);
+  color: black;
 }
+
+
 /* #pet{
     min-width: 300px;
     max-width: 400px;
