--- a/templates/remove_pet.html
+++ b/templates/remove_pet.html
@@ -21,6 +21,11 @@
               </div>
             </div>
             {% endfor %}
+            <div class="col">
+                <form method ='POST'>
+                    <button href="/" type="submit "class="btn btn-success">Done</button>
+                </form>
+            </div>
         </div>
     </section>
 
