--- a/templates/pet.html
+++ b/templates/pet.html
@@ -13,9 +13,10 @@
                 <div class="card bg-white">
                     <div class="card-body">
                         <h3 class="card-title">{{pet.name}}</h3>
-                        <p class="card-text p-2">{{text}}</p>
+                        <p class="card-text p-2">{{pet.about}}</p>
                         <a href="/images/{{pet._id}}" class="btn btn-primary">Add images to profile</a>
                         <a href="/remove/{{pet._id}}" class="btn btn-primary">Remove images from profile</a>
+                        <a href="/" class="btn btn-primary">Back to Pets</a>
                     </div>
                 </div>
             </div>
@@ -29,8 +30,7 @@
               <div class="card h-100">
                 <img src="{{picture.pet_pictures}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">{{pet.name}}</h5>
-                  <p class="card-text">likes, share</p>
+                  <p class="card-text">{{picture.caption}}</p>
                 </div>
               </div>
             </div>
