--- a/templates/remove.html
+++ b/templates/remove.html
@@ -11,12 +11,11 @@
               <div class="card h-100">
                 <img src="{{picture.pet_pictures}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">{{pet.name}}</h5>
-                    <p class="card-text">likes, share</p>
+                    <p class="card-text">{{}}</p>
 
                     <form method ='POST'>
                         <input type="hidden" value="{{picture._id}}" name ="delete" >
-                        <button class="btn btn-outline-warning" type="submit">Delete</button>
+                        <button class="btn btn-warning" type="submit">Delete</button>
                     </form>
 
                 </div>
