Styling theh pet list page
Pet list page getting styled better

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,9 @@ img{
 }
 .card{
   border:none;
-  background-color: rgb(255, 162, 104);}
+  background-color: rgb(240, 157, 105);}
 
 #form{
-  
   background-color: rgb(157, 220, 254);
   min-width: 500px;
   max-width: 700px;
@@ -31,7 +30,16 @@ img{
   background-color: rgb(62, 195, 252);
   color: black;
 }
+#profile_image{
+  width: 500px;
+  height: 400px;
+  object-fit: cover;
 
+}
+#profile_image_card{
+  width: 500px;
+  height: 400px;
+}
 
 /* #pet{
     min-width: 300px;
