--- a/templates/pet_list.html
+++ b/templates/pet_list.html
@@ -5,17 +5,15 @@
 <main>
   <!-- Profile image and info -->
   <section>
-    <div class="container-fluid mt-5 bg-whitesmoke"> 
-      <div class="card-group bg-white mr-5 ml-5">
-        <div class="card bg-white col-5">
-            
-                <img src="{{profile.profile_picture}}" class="card-img-top rounded mx-auto d-block" alt="...">
-        
+    <div class="container mr-auto ml-auto mt-5 bg-whitesmoke"> 
+      <div class="card-group">
+        <div class="card" id="profile_image_card"> 
+          <img id="profile_image" src="{{profile.profile_picture}}" class="rounded d-block" alt="...">       
         </div>
 
-        <div class="card bg-white">
+        <div class="card bg-whitesmoke">
             <div class="card-body">
-              <h3 class="card-title">{{profile.username}}</h3>
+              <h3 class="card-title mt-5">{{profile.username}}</h3>
               <p class="card-text p-2">{{profile.text}}</p>
               
               <a href="/edit_profile" class="btn btn-primary">Edit your profile</a>
@@ -27,24 +25,36 @@
 
 
     <section>
-        <div class="row mt-5 row-cols-1 row-cols-md-3 g-4">
-          {% for pet in pet_list %}
-            <div class="col">
-              <div class="card h-100">
-                <a href="/pet/{{pet._id}}"><img src="{{pet.photo_url}}" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                  <h5 class="card-title">{{pet.name}}</h5>
-                  <p class="card-text">likes, share</p>
+      <div class="container-fluid bg-whitesmoke mt-4">
+        <div class="row row-cols-1 row-cols-md-3">
+            {% for pet in pet_list %}
+              <div class="col p-3">
+                <div class="card h-100">
+                  <a href="/pet/{{pet._id}}"><img src="{{pet.photo_url}}" class="card-img-top" alt="..."></a>
+                  <div class="card-body">
+                    <h5 class="card-title">{{pet.name}}</h5>
+                    <p class="card-text">likes, share</p>
+                  </div>
                 </div>
               </div>
-            </div>
-          {% endfor %}
+            {% endfor %}
         </div>
+      </div>
+      
     </section>
 
   <section>
-    <a class="btn btn-outline-primary" href="/create" role="button"> New Pet</a>
-    <a class="btn btn-outline-warning" href="/delete" role="button"> Delete Pet</a>
+    <div class="container-fluid mt-5 mb-5">
+      <div class="col-6 mr-auto ml-auto">
+        <div class="row row-cols-md-2">
+        <a class="btn btn-outline-primary btn-lg" href="/create" role="button"> New Pet</a>
+        <a class="btn btn-outline-warning btn-lg" href="/delete" role="button"> Delete Pet</a>
+
+      </div>
+      </div>
+      
+    </div>
+    
   </section>
 </main>
 {% endblock content %}
