--- a/templates/pet.html
+++ b/templates/pet.html
@@ -4,15 +4,15 @@
 <main>
     <!-- Profile image and info -->
     <section>
-        <div class="container-fluid mt-5 bg-whitesmoke"> 
-            <div class="card-group bg-white mr-5 ml-5">
-                <div class="card bg-white col-5">
-                    <img src="{{pet.photo_url}}" class="card-img-top rounded mx-auto d-block" alt="...">
+        <div class="container mr-auto ml-auto mt-5 bg-whitesmoke"> 
+            <div class="card-group">
+                <div class="card" id="profile_image_card">
+                    <img id="profile_image" src="{{pet.photo_url}}" class="rounded d-block" alt="...">
                 </div>
 
-                <div class="card bg-white">
+                <div class="card ">
                     <div class="card-body">
-                        <h3 class="card-title">{{pet.name}}</h3>
+                        <h3 class="card-title mt-5">{{pet.name}}</h3>
                         <p class="card-text p-2">{{pet.about}}</p>
                         <a href="/images/{{pet._id}}" class="btn btn-primary">Add images to profile</a>
                         <a href="/remove/{{pet._id}}" class="btn btn-primary">Remove images from profile</a>
@@ -24,19 +24,22 @@
     </section>
 
     <section>
-        <div class="row mt-5 row-cols-1 row-cols-md-3 g-4">
-        {% for picture in pet_pictures %}
-            <div class="col">
-              <div class="card h-100">
-                <img src="{{picture.pet_pictures}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">{{picture.caption}}</p>
+        <div class="container-fluid bg-whitesmoke mt-4">
+          <div class="row row-cols-1 row-cols-md-3">
+            {% for picture in pet_pictures %}
+                <div class="col p-3">
+                  <div class="card h-100">
+                    <img src="{{picture.pet_pictures}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">{{picture.caption}}</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+          </div>
         </div>
-    </section>
+        
+      </section>
 
 
 
