--- a/templates/pet_list.html
+++ b/templates/pet_list.html
@@ -11,7 +11,7 @@
           <img id="profile_image" src="{{profile.profile_picture}}" class="rounded d-block" alt="...">       
         </div>
 
-        <div class="card bg-whitesmoke">
+        <div class="card">
             <div class="card-body">
               <h3 class="card-title mt-5">{{profile.username}}</h3>
               <p class="card-text p-2">{{profile.text}}</p>
