--- a/templates/remove_pet.html
+++ b/templates/remove_pet.html
@@ -5,29 +5,38 @@
 <main>
 
     <section>
-        <div class="row mt-5 row-cols-1 row-cols-md-3 g-4">
-            {% for pet in pet_list %}
-            <div class="col">
-              <div class="card h-100">
-                <a href="/pet/{{pet._id}}"><img src="{{pet.photo_url}}" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                    <h5 class="card-title">{{pet.name}}</h5>
-                    <p class="card-text">likes, share</p>
-                    <form method ='POST'>
-                        <input type="hidden" value="{{pet._id}}" name ="delete" >
-                        <button class="btn btn-danger" type="submit">Delete</button>
-                    </form>
+        <div class="container-fluid bg-whitesmoke mt-5">
+            <div class="row row-cols-1 row-cols-md-3">
+                {% for pet in pet_list %}
+                <div class="col p-3">
+                <div class="card h-100">
+                    <a href="/pet/{{pet._id}}"><img src="{{pet.photo_url}}" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">{{pet.name}}</h5>
+                        <p class="card-text">likes, share</p>
+                        <form method ='POST'>
+                            <input type="hidden" value="{{pet._id}}" name ="delete" >
+                            <button class="btn btn-danger" type="submit">Delete</button>
+                        </form>
+                    </div>
                 </div>
-              </div>
-            </div>
-            {% endfor %}
-            <div class="col">
-                <form method ='POST'>
-                    <button href="/" type="submit "class="btn btn-success">Done</button>
-                </form>
+                </div>
+                {% endfor %}
             </div>
         </div>
     </section>
-
+    <section>
+        <div class="container-fluid mt-5 mb-5">
+            <div class="col-1 mr-auto ml-auto">
+                <div>
+                    <form method ='POST'>
+                        
+                        <a class="btn btn-success btn-lg" href="/" type="submit "role="button"> Done</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+        
+      </section>
 </main>
 {% endblock content %}
